--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,12 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6rem;
+  padding-top: 6rem;
   min-height: 100vh;
-}
-
-.form {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
 }
